force-app/main/default/objects/Discount_Code__c/Discount_Code__c.object-meta.xml
<CustomObject>
    <label>Discount Code</label>
    <nameField>
        <displayFormat>DC-{000}</displayFormat>
        <label>Discount Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>