force-app/main/default/objects/Discount_Code__c/fields/Fixed_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Discount_Amount__c</fullName>
    <label>Fixed Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>