force-app/main/default/objects/Discount_Code__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <inlineHelpText>Describe where the code is used</inlineHelpText>
    <label>Usage</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>