force-app/main/default/objects/Discount_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Discount_Code__c</columns>
    <columns>Fixed_Discount_Amount__c</columns>
    <columns>Percentage_Discount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Usage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>